# FIles-and-proccess

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  autorestart.c  molecule.c  molecule.h  montecarlo.c  program.c  program.h  serialize.c  serialize.h  simulation.c  simulation.h  tester.c
test/: CMakeLists.txt  test_autorestart.sh.in  test_molecule.cpp  test_serialize.cpp
